externalname/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: externalname-service
  name: externalname-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: externalname-service
    weight: 100
  wildcardPolicy: None
